--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
         position: relative;
         height: 300px;
         overflow: hidden;
+        background: black;
     }
     .slide {
         position: absolute;
         width: 100%;
         height: 100%;
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-position: center;
         opacity: 0;
         transition: opacity 1.5s ease-in-out;
